samples/compile-error/missing-semicolon.nom
// This is the easiest semicolon to forget in almost any language

//! Error occurred during parsing: Expected one of ';', '.', or an operator, but found 'val'.
//! samples/compile-error/missing-semicolon.nom:16:5:
//! 16 |     val d: i32 = c;
//!    |     ^^^

fn main() -> unit {
    val a: i32 = 2;
    val b: i32 = 4;
    val c: i32 = if (a == b) {
        4
    } else {
        2
    }  // <--- Missing semicolon. RIP.
    val d: i32 = c;
}
